--- a/styles/style.css
+++ b/styles/style.css
@@ -50,8 +50,23 @@ noscript > div {
 .navbar .btnAjuda {
   padding: 6px 20px !important;
   font-size: 16px;
-  background-color: #ffee00;
+  background-color: #ffc530;
   color: #000;
+}
+.navbar .btnMenu {
+  padding: 6px 20px !important;
+  font-size: 16px;
+  color: #fff;
+  width: 50%;
+  border-bottom: 0.5px solid #2c2c2c;
+}
+.navbar .btnMenu:hover {
+  border-bottom: 0.5px solid #ffc530;
+  opacity: 1;
+}
+.navbar .btnMenu.active {
+  border-bottom: 0.5px solid #ffc530;
+  opacity: 1;
 }
 
 .container {
@@ -91,7 +106,7 @@ noscript > div {
 
 .container canvas {
   display: block;
-  width: 70%;
+  width: 80%;
   margin: 0 auto 1rem;
 }
 
